tests/specs/ecosystem/kwhinnery/animals/0_0_16.test
kwhinnery/animals/0.0.16
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: Module not found "file://<tmpdir>/types/animal".
    at file://<tmpdir>/types/mod.d.ts:1:15

